# crypto-price-prediction

./: .gitignore
docker-compose/: Makefile  news-signal-historical.yml  news-signal-live.yml  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: config.py  live.settings.env  pyproject.toml  run.py  settings.env
services/news/: Makefile  run.py
services/news-signal/: Makefile  fine_tuning.py  golden_dataset.py  pyproject.toml  run.py
services/news-signal/data/: golden_dataset.py  golden_dataset_claude.jsonl  golden_dataset_ollama.jsonl
services/news-signal/llms/: claude.py  ollama.py
services/quix_example/: hello.py  pyproject.toml
services/technical-indicators/: Dockerfile  Makefile  config.py  historical.settings.env  pyproject.toml  run.py
services/to-feature-store/: Dockerfile  config.py  historical.settings.env  live.settings.env  pyproject.toml  run.py  sinks.py
services/trades/: Dockerfile  Makefile  config.py  multistage.Dockerfile  pyproject.toml  run.py
services/trades/kraken_api/: mock.py  rest.py  trade.py  websocket.py
