[project]
name = "to-feature-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hopsworks>=4.1.4",
    "loguru>=0.7.3",
    "pandas>=2.1.4",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.3",
    "quixstreams>=3.4.0",
]
